@@ -1,3 +1,8 @@
+2007-02-02 [colin]	0.10.0cvs3
+
+	* src/feed.c
+		Fix indent and debug_print buglet
+
 2007-02-02 [colin]	0.10.0cvs2
 
 	* src/parsers.c
